--- a/src/index.html
+++ b/src/index.html
@@ -481,7 +481,7 @@
         </div>
     </div>
     <a href="#up" class="pageup btn-up btn-up_hide">
-        <img src="/icons/circle-up.svg" alt="up"> 
+        <img src="icons/circle-up.svg" alt="up"> 
     </a>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
